-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 14.0.0
-
None
-
d740fa7fa (master)
It seems that hovering over some constructs allows to show warnings from the embedded codemodel that are actually disabled:
The warning is bogus and related to a shortcoming of the embedded code model (see QTCREATORBUG-29864 and QDS-11149) and should be hidden because qmlls does find the property.
To reproduce, open and build ProjectA, open ProjectA/main.qml and, with qmlls enabled, hover over "screenColor".
The tooltip should be disabled for embedded codemodel warnings when those are disabled and not shown when qmlls is enabled.
- relates to
-
QTBUG-127956 qmlls: implement hover actions to show infos for QtC feature parity
-
- Reported
-
-
QTBUG-135924 QML LS minor problems Nested Imports
-
- Closed
-
- resulted from
-
QDS-11149 Auto-generated CMake project structure is not understood by Qt Creator's code model
-
- Closed
-
-
QTCREATORBUG-29864 Qt Creator adds other projects' QML import paths to the current project
-
- Closed
-