qmljshoverhandler: hide diagnostic when qmlls is running

Don't report tooltips with warnings from the embedded code model
when qmlls is running.

Fixes: QTCREATORBUG-31420
Change-Id: Ic97267a6e280732adb1ad390528406f250cac8a5
Reviewed-by: David Schulz <david.schulz@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>